Added basic test cases for UserService.java